@@ -1,3 +1,13 @@
+(defcustom py-devel-directory-out ""
+  "Output directory when developing Python-mode. "
+  :type 'string
+  :group 'python-mode)
+
+(defcustom py-devel-directory-in ""
+  "Input directory when developing Python-mode. "
+  :type 'string
+  :group 'python-mode)
+
 (defun python-components-mode-list-actives (&optional directory)
   "Return a list, which components will be loaded. "
   (interactive)
@@ -16,8 +26,8 @@
                    (finds (concat ele ".el")))))))
 
 (defun finds-from-programm ()
-  (let ((directory-in default-directory)
-        (directory-out (concat default-directory "doc"))
+  (let ((directory-in (or (and (not (string= "" py-devel-directory-in)) py-devel-directory-in) default-directory))
+        (directory-out (or (and (not (string= "" py-devel-directory-out)) py-devel-directory-out default-directory)) (concat default-directory "doc"))
         (erg (concat default-directory "python-mode.el"))
         (buffer (current-buffer)))
     (message "Lade %s" erg)
@@ -28,10 +38,11 @@
   "List all commands in file alongside with their documentation. "
   (interactive)
   (let* ((oldbuf (buffer-name (or buffer (current-buffer))))
-         (file (buffer-file-name))
+         ;; (file (buffer-file-name))
          (orgname (concat (substring oldbuf 0 (string-match "\\." oldbuf)) ".org"))
          (reSTname (concat (substring oldbuf 0 (string-match "\\." oldbuf)) ".rst"))
-         (directory-in (or directory-in default-directory))
+         (directory-in (or directory-in (and (not (string= "" py-devel-directory-in)) py-devel-directory-in) default-directory))
+         (directory-out (or directory-out (and (not (string= "" py-devel-directory-out)) py-devel-directory-out) default-directory))
          (directory-out-prepare
           (if directory-out
               (if
@@ -40,9 +51,9 @@
                 (concat directory-out "/"))
             default-directory))
          (directory-out (unless (and directory-out (string-match ".*/doc" directory-out))  (concat directory-out-prepare "doc/"))))
-    (finds-base oldbuf file orgname reSTname directory-in directory-out)))
+    (finds-base oldbuf orgname reSTname directory-in directory-out)))
 
-(defun finds-base (oldbuf file orgname reSTname directory-in directory-out)
+(defun finds-base (oldbuf orgname reSTname directory-in directory-out)
   (save-restriction
     (let (commandslist)
       ;; (widen)
@@ -56,7 +67,7 @@
             (add-to-list 'commandslist (cons (prin1-to-string name) docu))
             ;; (message "%s" (car commandslist))
             ;; (end-of-defun)
-))
+            ))
         (forward-line 1))
       (setq commandslist (nreverse commandslist))
       (with-temp-buffer
@@ -68,10 +79,16 @@
         (eval-buffer)
         (write-file (concat directory-out "commands-" "python-mode-el"
                             ;; (concat (substring oldbuf 0 (string-match "\\." oldbuf)) ".el")
-)))
+                            )))
+      (with-temp-buffer
+        (dolist (ele commandslist)
+          (insert (concat (car ele) "\n")))
+        (write-file (concat directory-out "python-mode-commands.txt")))
+
       (with-temp-buffer
         ;; org
-        (insert (concat (capitalize (substring oldbuf 0 (string-match "\." oldbuf))) " commands" "\n\n"))
+        ;; (insert (concat (capitalize (substring oldbuf 0 (string-match "\." oldbuf))) " commands" "\n\n"))
+        (insert "Python-mode commands\n\n")
         (dolist (ele commandslist)
           (insert (concat "* "(car ele) "\n"))
           (insert (concat "   " (cdr ele) "\n")))
@@ -79,8 +96,10 @@
         (find-file (concat directory-out "commands-" orgname)))
       (with-temp-buffer
         ;; reST
-        (insert (concat (capitalize (substring oldbuf 0 (string-match "\." oldbuf))) " commands" "\n"))
-        (insert (concat (make-string (length (concat (substring oldbuf 0 (string-match "\." oldbuf)) " commands")) ?\=) "\n\n"))
+        ;; (insert (concat (capitalize (substring oldbuf 0 (string-match "\." oldbuf))) " commands" "\n"))
+        (insert "Python-mode commands\n\n")
+        ;; (insert (concat (make-string (length (concat (substring oldbuf 0 (string-match "\." oldbuf)) " commands")) ?\=) "\n\n"))
+        (insert "====================\n\n")
         (dolist (ele commandslist)
           (insert (concat (car ele) "\n\n"))
           (insert (concat (make-string (length (car ele)) ?\-) "\n\n"))
